@startuml

title __SECURITY's Class Diagram__\n

    namespace uce.proyect {
      namespace security {
        class uce.proyect.security.AuthenticationEntryPointConfig {
            + afterPropertiesSet()
            + commence()
        }
    }
  }
  

    namespace uce.proyect {
      namespace security {
        class uce.proyect.security.CustomerAuthorizationFilter {
            {static} - log : Logger
            # doFilterInternal()
      }
    }
  }
  

    namespace uce.proyect {
      namespace security {
        class uce.proyect.security.Jasypt {
            + stringEncryptor()
      }
    }
  }
  

    namespace uce.proyect {
      namespace security {
        class uce.proyect.security.JwtAuthenticationFilter {
            - authenticationManager : AuthenticationManager
            {static} - log : Logger
            + JwtAuthenticationFilter()
            + attemptAuthentication()
            # successfulAuthentication()
        }
      }
  }
  

    namespace uce.proyect {
      namespace security {
        class uce.proyect.security.SecurityConfig {
            - userDetailsService : UserDetailsService
            + corsConfigurationSource()
            + passwordEncoder()
            # configure()
            # configure()
      }
    }
  }
  

  uce.proyect.security.AuthenticationEntryPointConfig -up-|> org.springframework.security.web.authentication.www.BasicAuthenticationEntryPoint
  uce.proyect.security.CustomerAuthorizationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  uce.proyect.security.JwtAuthenticationFilter -up-|> org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter
  uce.proyect.security.SecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
